<resources>
    <string name="app_name">AV N2</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btn_maps_activity_txt">Google Maps Activity</string>
    <string name="btn_config_activity_txt">Configurações</string>
    <string name="btn_radio_fem_txt">Feminino</string>
    <string name="btn_radio_masc_txt">Masculino</string>
    <string name="tv_peso_txt">Peso</string>
    <string name="tv_altura_txt">Altura</string>
    <string name="tv_nascimento_txt">Data de nascimento</string>
    <string name="tv_genero_txt">Gênero</string>
    <string name="tv_mapa_txt">Mapa</string>
    <string name="btn_radio_vetorial_txt">Vetorial</string>
    <string name="btn_radio_satelite_txt">Satélite</string>
    <string name="btn_radio_north_txt">North Up</string>
    <string name="btn_radio_course_txt">Course Up</string>
    <string name="tv_navegacao_txt">Navegação</string>
    <string name="btn_salvar_txt">Salvar</string>
    <string name="btn_cancelar_txt">Cancelar</string>
    <string name="btn_start_txt">Start</string>
    <string name="btn_stop_txt">Stop</string>
    <string name="tv_log_txt">Nada no banco</string>
    <string name="btn_obter_trilha_txt">Obter Trilha</string>
    <string name="btn_creditos_txt">Créditos</string>
    <string name="tv_descricao_projeto_txt">Este aplicativo foi desenvolvido para o gerenciamento de trilhas em dispositivos móveis. Ele permite o monitoramento de percursos via GPS, cálculo de velocidade, distância e gasto calórico, além de permitir a visualização e histórico de trilhas realizadas.</string>
    <string name="btn_consultar_trilha_txt">Consultar Trilha</string>
    <string name="btn_limpar_historico_txt">Limpar Histórico</string>
</resources>